github action modification

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,11 @@ jobs:
         working-directory: ./terraform
         run: terraform validate
 
+      - name: Terraform Destroy
+        working-directory: ./terraform
+        run: terraform destroy -auto-approve
+        continue-on-error: true  # In case no resources exist yet
+
       - name: Terraform Plan
         working-directory: ./terraform
         run: terraform plan
